--- a/ObservingProject_Part1_student.ipynb
+++ b/ObservingProject_Part1_student.ipynb
@@ -50,9 +50,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.37127699999999997\n",
+      "12.672921599999999\n"
+     ]
+    }
+   ],
    "source": [
     "#Answer A) Here\n",
     "#You will need to use simple mathematical expressions and what you learned in class to find the asnwers to these.  \n",
@@ -60,8 +69,17 @@
     "#You will need an expression for both parts 1 and 2 above\n",
     "\n",
     "#part 1\n",
+    "d = 13.5*(10**-6)\n",
+    "f = 7.5\n",
+    "s_p = d*(206265/f)\n",
     "\n",
-    "#part 2"
+    "print(s_p)\n",
+    "\n",
+    "#part 2\n",
+    "N_p = 2048\n",
+    "FOV = (s_p * N_p)/60\n",
+    "\n",
+    "print(FOV)\n"
    ]
   },
   {
@@ -75,9 +93,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-2-1cdd7c9561fd>, line 30)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-1cdd7c9561fd>\"\u001b[0;36m, line \u001b[0;32m30\u001b[0m\n\u001b[0;31m    _LONGITUDE_ =  #*******************\u001b[0m\n\u001b[0m                                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "#There is a function in the python package astroplan to find the sunset time for a given location and date:\n",
     "#    https://astroplan.readthedocs.io/en/latest/api/astroplan.Observer.html#astroplan.Observer.sun_set_time\n",
@@ -171,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,9 +276,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-5-486dc8e5ef84>, line 25)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-486dc8e5ef84>\"\u001b[0;36m, line \u001b[0;32m25\u001b[0m\n\u001b[0;31m    target_coord = SkyCoord(ra=*u.deg, dec=*u.deg)\u001b[0m\n\u001b[0m                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "#Here, we will provide you with the code needed to make airmass plots. You will use this to guide your answer to E part 2\n",
     "###We important all the needed packages\n",
@@ -295,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
