--- a/ObservingProject_Part1_student.ipynb
+++ b/ObservingProject_Part1_student.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -93,15 +93,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-2-1cdd7c9561fd>, line 30)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-1cdd7c9561fd>\"\u001b[0;36m, line \u001b[0;32m30\u001b[0m\n\u001b[0;31m    _LONGITUDE_ =  #*******************\u001b[0m\n\u001b[0m                                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sunset: 2019-11-05 00:47:55.969\n",
+      "Sunset Lawrence: 2019-11-04 18:47:55.969\n",
+      "Sunset MLO: 2019-11-04 16:47:55.998\n"
      ]
     }
    ],
@@ -135,11 +136,11 @@
     "#****************\n",
     "#Here you will need to define the coordinates of the MLO observatory. Note that W and S have negative values (whereas E and N are positive).\n",
     "#The latitude and longitude need to be put in decimal form, e.g. long = 20.0003, lat = 33.33333 (those are not the right coordinates)\n",
-    "_LONGITUDE_ =  #*******************\n",
-    "_LATITUDE_ =    #*******************\n",
+    "_LONGITUDE_ = -116.427611 #*******************\n",
+    "_LATITUDE_ = 32.842250  #*******************\n",
     "\n",
     "#This is an astropy Time object, with a time value that corresponds to the date of observation. Date format: Time('YYYY-MM-DD')\n",
-    "_TIME_ = Time('') #*******************\n",
+    "_TIME_ = Time('2019-11-05') #*******************\n",
     "\n",
     "#This makes the observer object for the MLO observatory. \n",
     "MLO_observer = Observer(longitude = _LONGITUDE_*u.deg, latitude = _LATITUDE_*u.deg, elevation = 1859.0*u.m, name = \"MLO\",timezone = \"US/Pacific\") #*********\n",
@@ -153,7 +154,13 @@
     "print(\"Sunset: {0.iso}\".format(sunset_time)) \n",
     "\n",
     "#*****************\n",
-    "#put calculation here to find sunset time at MLO and in Lawrence.  Also include code to print answers."
+    "#put calculation here to find sunset time at MLO and in Lawrence.  Also include code to print answers.\n",
+    "\n",
+    "Lawrence_Time = sunset_time - 0.25\n",
+    "MLO_Time = sunset_time - 0.333333\n",
+    "\n",
+    "print(\"Sunset Lawrence: {0.iso}\".format(Lawrence_Time))\n",
+    "print(\"Sunset MLO: {0.iso}\".format(MLO_Time))\n"
    ]
   },
   {
@@ -167,9 +174,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'location' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-cf301421ec5b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;31m#*******************\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;31m#Answer C) Here. YOUR CODE:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0mobserver_object\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mObserver\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlocation\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlocation\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"MLO\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtimezone\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"US/Pacific\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m \u001b[0mastro_twilight\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mobserver_object\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtwilight_evening_astronomical\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mTime_date\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwhich\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"next\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'location' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#There is an astroplan function that can be used to find astronomical twilight for a given time and position(observer):\n",
     "#    https://astroplan.readthedocs.io/en/latest/api/astroplan.Observer.html#astroplan.Observer.twilight_evening_astronomical\n",
@@ -183,7 +202,8 @@
     "###\n",
     "#*******************\n",
     "#Answer C) Here. YOUR CODE: \n",
-    "astro_twilight = \n",
+    "observer_object = Observer(location=location, name=\"MLO\", timezone=\"US/Pacific\")\n",
+    "astro_twilight = observer_object.twilight_evening_astronomical(Time_date, which = \"next\")\n",
     "\n",
     "#The following provides a useful way to print out astropy Time objects in a convenient way. \n",
     "print(\"Astronomical Twilight: {0.iso}\".format(astro_twilight)) "
@@ -198,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,18 +296,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-5-486dc8e5ef84>, line 25)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-486dc8e5ef84>\"\u001b[0;36m, line \u001b[0;32m25\u001b[0m\n\u001b[0;31m    target_coord = SkyCoord(ra=*u.deg, dec=*u.deg)\u001b[0m\n\u001b[0m                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Here, we will provide you with the code needed to make airmass plots. You will use this to guide your answer to E part 2\n",
     "###We important all the needed packages\n",
