--- a/ObservingProject_Part2_student.ipynb
+++ b/ObservingProject_Part2_student.ipynb
@@ -162,25 +162,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a) The number of BKG counts in B and V in 15min is: \n",
-      "b) BKG noise in B and V: \n",
-      "c) limiting counts for SNR limit in B and V: \n",
-      "d) the number of counts in B and V for a 20th mag object in 15min: \n",
-      "e) magnitude limits in B and V corresponding to our SNR limit: \n"
+      "a) The number of BKG counts in B and V in 15min is:  35667.0   26595.0\n",
+      "b) BKG noise in B and V:  188.85708882644568   163.07973509912262\n",
+      "c) limiting counts for SNR limit in B and V:  2832.856332396685   2446.1960264868394\n",
+      "d) the number of counts in B and V for a 20th mag object in 15min:  16335   17496\n",
+      "e) magnitude limits in B and V corresponding to our SNR limit:  21.902236472172543   22.136118784114\n"
      ]
     }
    ],
    "source": [
     "#Answer 8) Here\n",
     "#YOUR CODE GOES HERE\n",
-    "\n",
+    "signal_b = 1815\n",
+    "signal_v = 1944\n",
+    "bkg_b = 396.3*(900/10)\n",
+    "bkg_v = 295.5*(900/10)\n",
+    "noise_b = bkg_b/np.sqrt(bkg_b)\n",
+    "noise_v = bkg_v/np.sqrt(bkg_v)\n",
+    "limiting_b = noise_b*15\n",
+    "limiting_v = noise_v*15\n",
+    "NumCounts_b = signal_b*9\n",
+    "NumCounts_v = signal_v*9\n",
+    "m1 = 20\n",
+    "maglimit_b = 2.5*np.log10(NumCounts_b/limiting_b) + m1\n",
+    "maglimit_v = 2.5*np.log10(NumCounts_v/limiting_v) + m1\n",
     "#Hint: You need to use the information about the number of counts \n",
     "#for different sources that I give above.\n",
     "\n",
@@ -192,16 +204,16 @@
     "#limiting magnitude.\n",
     "\n",
     "#first measure the total background expected in 15 minutes\n",
-    "print(\"a) The number of BKG counts in B and V in 15min is: \", )\n",
+    "print(\"a) The number of BKG counts in B and V in 15min is: \",bkg_b,\" \", bkg_v )\n",
     "\n",
-    "print(\"b) BKG noise in B and V: \", )\n",
+    "print(\"b) BKG noise in B and V: \",noise_b,\" \",noise_v )\n",
     "\n",
     "#now determine the number of object counts needed in 15 minutes to get the desired SNR.  \n",
-    "print(\"c) limiting counts for SNR limit in B and V: \", )\n",
+    "print(\"c) limiting counts for SNR limit in B and V: \",limiting_b,\" \",limiting_v )\n",
     "\n",
-    "print(\"d) the number of counts in B and V for a 20th mag object in 15min: \", )\n",
+    "print(\"d) the number of counts in B and V for a 20th mag object in 15min: \",NumCounts_b,\" \",NumCounts_v )\n",
     "\n",
-    "print(\"e) magnitude limits in B and V corresponding to our SNR limit: \", )\n"
+    "print(\"e) magnitude limits in B and V corresponding to our SNR limit: \",maglimit_b,\" \",maglimit_v )\n"
    ]
   },
   {
