--- a/ObservingProject_Part2_student.ipynb
+++ b/ObservingProject_Part2_student.ipynb
@@ -238,6 +238,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Repeating old experiments in science is always a good thing. You might also be looking to learn something new when repeating an old experiments or observations or increasing accuracy of old results. Clusters that are in regions that are hard to observe may have little data.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "--------------------------\n",
     "<i> By this point you should have enough information to pick 2-3 clusters that you might want to observe given all of the conditions above.  Below you will make some plots for each of these clusters.  </i>\n",
     "\n"
@@ -13731,7 +13738,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "NGC 7044 seems to be a good cluster selection. The color mag diagram is clear and we can see an apparent main sequence. The magnitude of the stars within the cluster also fall within our calculated range. Some are pretty faint however, and close to our mag limit. A few stars are outside of our calculated mag limits.  \n",
+    "\n",
+    "IC 4996 also has a visible main sequence. The stars in this cluster are on average lower in magnitude when compared to NGC 7044. Less stars approach our calculated mag limit. \n",
+    "\n",
+    "Berkeley 89 has similar characteristics to NGC 7044. The main sequence is apparent and the average mag is high. Some stars fall outside this limit. "
+   ]
   },
   {
    "cell_type": "code",
@@ -15947,6 +15960,22 @@
     "\n",
     "You will also need to have a block of summary text that describes your choice of clusters.\n",
     "</p></b>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Summary:\n",
+    "\n",
+    "NGC 7044\n",
+    "The RA and DEC of this cluster allow for an altitude of above 60 for most of the observing period. This culster also has an angular size of ~6.4 arcmin which fits inside our telescope field of view well. The number of stars is 2056. The cluster also appreas to be in an area of the sky with little surrounding it making observations easier with less noise. \n",
+    "\n",
+    "IC 4996\n",
+    "The RA and DEC of this cluster is also acceptable. The angular size, however, is slightly large at 12.8 arcmin. This is slightly outside our max fov of 12.7  making the observation of certain stars impossible. This should be the 3rd choice out of the 3. \n",
+    "\n",
+    "Berkeley 89\n",
+    "The RA and DEC of this cluster allow for an altitude of above 60 for most of the observing period. This culster also has an angular size of ~5 arcmin which fits inside our telescope field of view well. The number of stars is 1689. This cluster appears to potentiallt be in a populated field. This may increase noise. "
    ]
   }
  ],
