AirMass Boundary Fix

--- a/ObservingProject_Part1_student.ipynb
+++ b/ObservingProject_Part1_student.ipynb
@@ -3882,7 +3882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -4121,10 +4121,10 @@
        "L 43.984943 -268.109002 \n",
        "L 40.603125 -268.109002 \n",
        "z\n",
-       "\" id=\"mcd0dc3d33f\" style=\"stroke:#ffa500;stroke-opacity:0.1;\"/>\n",
+       "\" id=\"m937f7e6c23\" style=\"stroke:#ffa500;stroke-opacity:0.1;\"/>\n",
        "    </defs>\n",
-       "    <g clip-path=\"url(#pd8b8b7f16a)\">\n",
-       "     <use style=\"fill:#ffa500;fill-opacity:0.1;stroke:#ffa500;stroke-opacity:0.1;\" x=\"0\" xlink:href=\"#mcd0dc3d33f\" y=\"279.108221\"/>\n",
+       "    <g clip-path=\"url(#pf91c2a7353)\">\n",
+       "     <use style=\"fill:#ffa500;fill-opacity:0.1;stroke:#ffa500;stroke-opacity:0.1;\" x=\"0\" xlink:href=\"#m937f7e6c23\" y=\"279.108221\"/>\n",
        "    </g>\n",
        "   </g>\n",
        "   <g id=\"matplotlib.axis_1\">\n",
@@ -4133,10 +4133,10 @@
        "      <defs>\n",
        "       <path d=\"M 0 0 \n",
        "L 0 3.5 \n",
-       "\" id=\"mc13bc22e80\" style=\"stroke:#000000;stroke-width:0.8;\"/>\n",
+       "\" id=\"m175c52d4c1\" style=\"stroke:#000000;stroke-width:0.8;\"/>\n",
        "      </defs>\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"51.014088\" xlink:href=\"#mc13bc22e80\" y=\"228.439219\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"51.014088\" xlink:href=\"#m175c52d4c1\" y=\"228.439219\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_1\">\n",
@@ -4224,7 +4224,7 @@
        "    <g id=\"xtick_2\">\n",
        "     <g id=\"line2d_2\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"92.864088\" xlink:href=\"#mc13bc22e80\" y=\"228.439219\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"92.864088\" xlink:href=\"#m175c52d4c1\" y=\"228.439219\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_2\">\n",
@@ -4282,7 +4282,7 @@
        "    <g id=\"xtick_3\">\n",
        "     <g id=\"line2d_3\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"134.714088\" xlink:href=\"#mc13bc22e80\" y=\"228.439219\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"134.714088\" xlink:href=\"#m175c52d4c1\" y=\"228.439219\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_3\">\n",
@@ -4325,7 +4325,7 @@
        "    <g id=\"xtick_4\">\n",
        "     <g id=\"line2d_4\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"176.564088\" xlink:href=\"#mc13bc22e80\" y=\"228.439219\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"176.564088\" xlink:href=\"#m175c52d4c1\" y=\"228.439219\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_4\">\n",
@@ -4342,7 +4342,7 @@
        "    <g id=\"xtick_5\">\n",
        "     <g id=\"line2d_5\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"218.414088\" xlink:href=\"#mc13bc22e80\" y=\"228.439219\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"218.414088\" xlink:href=\"#m175c52d4c1\" y=\"228.439219\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_5\">\n",
@@ -4393,7 +4393,7 @@
        "    <g id=\"xtick_6\">\n",
        "     <g id=\"line2d_6\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"260.264088\" xlink:href=\"#mc13bc22e80\" y=\"228.439219\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"260.264088\" xlink:href=\"#m175c52d4c1\" y=\"228.439219\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_6\">\n",
@@ -4442,7 +4442,7 @@
        "    <g id=\"xtick_7\">\n",
        "     <g id=\"line2d_7\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"302.114088\" xlink:href=\"#mc13bc22e80\" y=\"228.439219\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"302.114088\" xlink:href=\"#m175c52d4c1\" y=\"228.439219\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_7\">\n",
@@ -4491,7 +4491,7 @@
        "    <g id=\"xtick_8\">\n",
        "     <g id=\"line2d_8\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"343.964088\" xlink:href=\"#mc13bc22e80\" y=\"228.439219\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"343.964088\" xlink:href=\"#m175c52d4c1\" y=\"228.439219\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_8\">\n",
@@ -4741,10 +4741,10 @@
        "      <defs>\n",
        "       <path d=\"M 0 0 \n",
        "L -3.5 0 \n",
-       "\" id=\"m5559352bea\" style=\"stroke:#000000;stroke-width:0.8;\"/>\n",
+       "\" id=\"m6051187cce\" style=\"stroke:#000000;stroke-width:0.8;\"/>\n",
        "      </defs>\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"40.603125\" xlink:href=\"#m5559352bea\" y=\"228.439219\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"40.603125\" xlink:href=\"#m6051187cce\" y=\"228.439219\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_10\">\n",
@@ -4757,7 +4757,7 @@
        "    <g id=\"ytick_2\">\n",
        "     <g id=\"line2d_10\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"40.603125\" xlink:href=\"#m5559352bea\" y=\"204.279219\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"40.603125\" xlink:href=\"#m6051187cce\" y=\"204.279219\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_11\">\n",
@@ -4771,7 +4771,7 @@
        "    <g id=\"ytick_3\">\n",
        "     <g id=\"line2d_11\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"40.603125\" xlink:href=\"#m5559352bea\" y=\"180.119219\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"40.603125\" xlink:href=\"#m6051187cce\" y=\"180.119219\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_12\">\n",
@@ -4785,7 +4785,7 @@
        "    <g id=\"ytick_4\">\n",
        "     <g id=\"line2d_12\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"40.603125\" xlink:href=\"#m5559352bea\" y=\"155.959219\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"40.603125\" xlink:href=\"#m6051187cce\" y=\"155.959219\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_13\">\n",
@@ -4799,7 +4799,7 @@
        "    <g id=\"ytick_5\">\n",
        "     <g id=\"line2d_13\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"40.603125\" xlink:href=\"#m5559352bea\" y=\"131.799219\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"40.603125\" xlink:href=\"#m6051187cce\" y=\"131.799219\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_14\">\n",
@@ -4832,7 +4832,7 @@
        "    <g id=\"ytick_6\">\n",
        "     <g id=\"line2d_14\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"40.603125\" xlink:href=\"#m5559352bea\" y=\"107.639219\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"40.603125\" xlink:href=\"#m6051187cce\" y=\"107.639219\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_15\">\n",
@@ -4846,7 +4846,7 @@
        "    <g id=\"ytick_7\">\n",
        "     <g id=\"line2d_15\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"40.603125\" xlink:href=\"#m5559352bea\" y=\"83.479219\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"40.603125\" xlink:href=\"#m6051187cce\" y=\"83.479219\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_16\">\n",
@@ -4860,7 +4860,7 @@
        "    <g id=\"ytick_8\">\n",
        "     <g id=\"line2d_16\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"40.603125\" xlink:href=\"#m5559352bea\" y=\"59.319219\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"40.603125\" xlink:href=\"#m6051187cce\" y=\"59.319219\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_17\">\n",
@@ -4885,7 +4885,7 @@
        "    <g id=\"ytick_9\">\n",
        "     <g id=\"line2d_17\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"40.603125\" xlink:href=\"#m5559352bea\" y=\"35.159219\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"40.603125\" xlink:href=\"#m6051187cce\" y=\"35.159219\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_18\">\n",
@@ -4899,7 +4899,7 @@
        "    <g id=\"ytick_10\">\n",
        "     <g id=\"line2d_18\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"40.603125\" xlink:href=\"#m5559352bea\" y=\"10.999219\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"40.603125\" xlink:href=\"#m6051187cce\" y=\"10.999219\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_19\">\n",
@@ -5014,77 +5014,74 @@
        "    </g>\n",
        "   </g>\n",
        "   <g id=\"line2d_19\">\n",
-       "    <path clip-path=\"url(#pd8b8b7f16a)\" d=\"M 81.184943 223.746076 \n",
-       "L 84.566761 218.819572 \n",
-       "L 87.94858 213.720044 \n",
-       "L 91.330398 208.459599 \n",
-       "L 94.712216 203.049723 \n",
-       "L 98.094034 197.501278 \n",
-       "L 101.475852 191.824517 \n",
-       "L 104.85767 186.029113 \n",
-       "L 108.239489 180.124183 \n",
-       "L 111.621307 174.118331 \n",
-       "L 115.003125 168.019686 \n",
-       "L 118.384943 161.83595 \n",
-       "L 121.766761 155.57445 \n",
-       "L 125.14858 149.242192 \n",
-       "L 128.530398 142.845924 \n",
-       "L 131.912216 136.392206 \n",
-       "L 135.294034 129.887498 \n",
-       "L 138.675852 123.338254 \n",
-       "L 142.05767 116.751057 \n",
-       "L 145.439489 110.13278 \n",
-       "L 148.821307 103.490814 \n",
-       "L 152.203125 96.833387 \n",
-       "L 155.584943 90.170029 \n",
-       "L 158.966761 83.512275 \n",
-       "L 162.34858 76.874773 \n",
-       "L 165.730398 70.277082 \n",
-       "L 169.112216 63.746739 \n",
-       "L 172.494034 57.324686 \n",
-       "L 175.875852 51.075319 \n",
-       "L 179.25767 45.105794 \n",
-       "L 182.639489 39.603573 \n",
-       "L 186.021307 34.904437 \n",
-       "L 189.403125 31.575277 \n",
-       "L 192.784943 30.342717 \n",
-       "L 196.166761 31.58858 \n",
-       "L 199.54858 34.927318 \n",
-       "L 202.930398 39.632222 \n",
-       "L 206.312216 45.137778 \n",
-       "L 209.694034 51.109273 \n",
-       "L 213.075852 57.359843 \n",
-       "L 216.45767 63.78265 \n",
-       "L 219.839489 70.31347 \n",
-       "L 223.221307 76.911455 \n",
-       "L 226.603125 83.549125 \n",
-       "L 229.984943 90.206955 \n",
-       "L 233.366761 96.870319 \n",
-       "L 236.74858 103.527695 \n",
-       "L 240.130398 110.169563 \n",
-       "L 243.512216 116.787699 \n",
-       "L 246.894034 123.374715 \n",
-       "L 250.275852 129.923741 \n",
-       "L 253.65767 136.428197 \n",
-       "L 257.039489 142.881626 \n",
-       "L 260.421307 149.27757 \n",
-       "L 263.803125 155.609467 \n",
-       "L 267.184943 161.870568 \n",
-       "L 270.566761 168.053864 \n",
-       "L 273.94858 174.152028 \n",
-       "L 277.330398 180.157355 \n",
-       "L 280.712216 186.061712 \n",
-       "L 284.094034 191.856495 \n",
-       "L 287.475852 197.53258 \n",
-       "L 290.85767 203.080295 \n",
-       "L 294.239489 208.48938 \n",
-       "L 297.621307 213.748971 \n",
-       "L 301.003125 218.847579 \n",
-       "L 304.384943 223.773093 \n",
+       "    <path clip-path=\"url(#pf91c2a7353)\" d=\"M 81.184943 225.185175 \n",
+       "L 84.566761 219.562162 \n",
+       "L 87.94858 213.786513 \n",
+       "L 91.330398 207.870009 \n",
+       "L 94.712216 201.823593 \n",
+       "L 98.094034 195.657413 \n",
+       "L 101.475852 189.380867 \n",
+       "L 104.85767 183.002657 \n",
+       "L 108.239489 176.530833 \n",
+       "L 111.621307 169.972847 \n",
+       "L 115.003125 163.335602 \n",
+       "L 118.384943 156.625497 \n",
+       "L 121.766761 149.848474 \n",
+       "L 125.14858 143.010058 \n",
+       "L 128.530398 136.115402 \n",
+       "L 131.912216 129.169322 \n",
+       "L 135.294034 122.17634 \n",
+       "L 138.675852 115.140717 \n",
+       "L 142.05767 108.066495 \n",
+       "L 145.439489 100.95754 \n",
+       "L 148.821307 93.817585 \n",
+       "L 152.203125 86.650296 \n",
+       "L 155.584943 79.459354 \n",
+       "L 158.966761 72.248576 \n",
+       "L 162.34858 65.022134 \n",
+       "L 165.730398 57.784937 \n",
+       "L 169.112216 50.543433 \n",
+       "L 172.494034 43.307452 \n",
+       "L 175.875852 36.095201 \n",
+       "L 179.25767 28.950095 \n",
+       "L 182.639489 22.021415 \n",
+       "L 186.021307 16.274234 \n",
+       "L 189.403125 17.430579 \n",
+       "L 192.784943 23.73035 \n",
+       "L 196.166761 30.743387 \n",
+       "L 199.54858 37.912534 \n",
+       "L 202.930398 45.133364 \n",
+       "L 206.312216 52.371992 \n",
+       "L 209.694034 59.61316 \n",
+       "L 213.075852 66.848176 \n",
+       "L 216.45767 74.071096 \n",
+       "L 219.839489 81.277248 \n",
+       "L 223.221307 88.46258 \n",
+       "L 226.603125 95.623321 \n",
+       "L 229.984943 102.755807 \n",
+       "L 233.366761 109.85636 \n",
+       "L 236.74858 116.921218 \n",
+       "L 240.130398 123.946476 \n",
+       "L 243.512216 130.92804 \n",
+       "L 246.894034 137.861585 \n",
+       "L 250.275852 144.742521 \n",
+       "L 253.65767 151.565948 \n",
+       "L 257.039489 158.326624 \n",
+       "L 260.421307 165.018922 \n",
+       "L 263.803125 171.636789 \n",
+       "L 267.184943 178.173703 \n",
+       "L 270.566761 184.622627 \n",
+       "L 273.94858 190.975962 \n",
+       "L 277.330398 197.225497 \n",
+       "L 280.712216 203.362361 \n",
+       "L 284.094034 209.37697 \n",
+       "L 287.475852 215.25898 \n",
+       "L 290.85767 220.997239 \n",
+       "L 294.239489 226.57975 \n",
        "\" style=\"fill:none;stroke:#1f77b4;stroke-linecap:square;stroke-width:1.5;\"/>\n",
        "   </g>\n",
        "   <g id=\"line2d_20\">\n",
-       "    <path clip-path=\"url(#pd8b8b7f16a)\" d=\"M 40.603125 83.479219 \n",
+       "    <path clip-path=\"url(#pf91c2a7353)\" d=\"M 40.603125 83.479219 \n",
        "L 43.984943 83.479219 \n",
        "L 47.366761 83.479219 \n",
        "L 50.74858 83.479219 \n",
@@ -5187,7 +5184,7 @@
        "\" style=\"fill:none;stroke:#ff7f0e;stroke-dasharray:5.55,2.4;stroke-dashoffset:0;stroke-width:1.5;\"/>\n",
        "   </g>\n",
        "   <g id=\"line2d_21\">\n",
-       "    <path clip-path=\"url(#pd8b8b7f16a)\" d=\"M 208.003125 228.439219 \n",
+       "    <path clip-path=\"url(#pf91c2a7353)\" d=\"M 208.003125 228.439219 \n",
        "L 208.003125 226.242855 \n",
        "L 208.003125 224.046491 \n",
        "L 208.003125 221.850128 \n",
@@ -5290,7 +5287,7 @@
        "\" style=\"fill:none;stroke:#ff0000;stroke-dasharray:5.55,2.4;stroke-dashoffset:0;stroke-width:1.5;\"/>\n",
        "   </g>\n",
        "   <g id=\"line2d_22\">\n",
-       "    <path clip-path=\"url(#pd8b8b7f16a)\" d=\"M 242.878125 228.439219 \n",
+       "    <path clip-path=\"url(#pf91c2a7353)\" d=\"M 242.878125 228.439219 \n",
        "L 242.878125 226.242855 \n",
        "L 242.878125 224.046491 \n",
        "L 242.878125 221.850128 \n",
@@ -5415,7 +5412,7 @@
        "  </g>\n",
        " </g>\n",
        " <defs>\n",
-       "  <clipPath id=\"pd8b8b7f16a\">\n",
+       "  <clipPath id=\"pf91c2a7353\">\n",
        "   <rect height=\"217.44\" width=\"334.8\" x=\"40.603125\" y=\"10.999219\"/>\n",
        "  </clipPath>\n",
        " </defs>\n",
@@ -5456,7 +5453,7 @@
     "#With these coordinates, we make a target object using the FixedTarget function from astroplan.\n",
     "#Using the RA range from Part D, you should play with the DEC parameter until you find which DEC\n",
     "#values satisfy the altitude constraint.\n",
-    "target_coord = SkyCoord(ra=305.80*u.deg, dec=40.78*u.deg)\n",
+    "target_coord = SkyCoord(ra=299.87*u.deg, dec=34.65*u.deg)\n",
     "target_source = FixedTarget(coord=target_coord, name=\"Target\")\n",
     "\n",
     "#We now actually construct the airmass plot. The plut_altitude function makes the airmass plot, with the elevation on the y-axis\n",
