--- a/reduction_part1_student.ipynb
+++ b/reduction_part1_student.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,19 +158,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "biaslist_good =  ['b000.fits' 'b001.fits' 'b002.fits' 'b003.fits' 'b004.fits' 'b005.fits'\n",
+      " 'b006.fits' 'b007.fits' 'b008.fits' 'b009.fits' 'b010.fits' 'b011.fits'\n",
+      " 'b012.fits' 'b013.fits' 'b014.fits' 'b015.fits' 'b016.fits' 'b017.fits'\n",
+      " 'b018.fits' 'b019.fits' 'b020.fits' 'b021.fits'] \n",
+      "\n",
+      "flatlist_B_good =  ['f023.fits' 'f024.fits' 'f025.fits' 'f026.fits' 'f027.fits' 'f028.fits'] \n",
+      "\n",
+      "flatlist_V_good =  ['f029.fits' 'f030.fits' 'f031.fits' 'f032.fits' 'f033.fits'] \n",
+      "\n",
+      "sciencelist_B_King20_good =  ['s093.fits' 's094.fits' 's095.fits' 's096.fits' 's097.fits' 's098.fits'\n",
+      " 's099.fits' 's100.fits' 's104.fits' 's105.fits' 's106.fits'] \n",
+      "\n",
+      "sciencelist_V_King20_good =  ['s085.fits' 's086.fits' 's087.fits' 's088.fits' 's089.fits' 's090.fits'\n",
+      " 's091.fits' 's092.fits' 's101.fits' 's102.fits' 's103.fits'] \n",
+      "\n",
+      "sciencelist_B_NGC7128_good =  ['s053.fits' 's054.fits' 's055.fits' 's056.fits' 's057.fits' 's058.fits'\n",
+      " 's059.fits' 's60.fits' 's064.fits' 's065.fits' 's066.fits'] \n",
+      "\n",
+      "sciencelist_V_NGC7128_good =  ['s045.fits' 's046.fits' 's047.fits' 's048.fits' 's049.fits' 's050.fits'\n",
+      " 's051.fits' 's052.fits' 's061.fits' 's062.fits' 's063.fits'] \n",
+      "\n",
+      "sciencelist_V_C11_good =  ['s111.fits']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/e731s866/.conda/envs/python3env/lib/python3.7/site-packages/ipykernel_launcher.py:14: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
+      "  \n"
+     ]
+    }
+   ],
    "source": [
     "#a list of bad images\n",
     "#*************\n",
-    "badlist = np.array([\"bad1.fits\",\"bad2.fits\"])\n",
+    "badlist = np.array([])\n",
     "\n",
     "#make a cleaned version of the biaslist\n",
     "biaslist_good = imlist_clean(biaslist,badlist)\n",
-    "print(\"biaslist_good = \",biaslist_good)\n",
+    "print(\"biaslist_good = \",biaslist_good,\"\\n\")\n",
     "\n",
-    "#Now repeat this block of code for the twilight flats and the science flats in each band\n"
+    "#Now repeat this block of code for the twilight flats and the science flats in each band\n",
+    "flatlist_B_good = imlist_clean(flatlist_B,badlist)\n",
+    "print(\"flatlist_B_good = \",flatlist_B_good,\"\\n\")\n",
+    "\n",
+    "flatlist_V_good = imlist_clean(flatlist_V,badlist)\n",
+    "print(\"flatlist_V_good = \",flatlist_V_good,\"\\n\")\n",
+    "\n",
+    "sciencelist_B_King20_good = imlist_clean(sciencelist_B_King20,badlist)\n",
+    "print(\"sciencelist_B_King20_good = \",sciencelist_B_King20_good,\"\\n\")\n",
+    "\n",
+    "sciencelist_V_King20_good = imlist_clean(sciencelist_V_King20,badlist)\n",
+    "print(\"sciencelist_V_King20_good = \",sciencelist_V_King20_good,\"\\n\")\n",
+    "\n",
+    "sciencelist_B_NGC7128_good = imlist_clean(sciencelist_B_NGC7128,badlist)\n",
+    "print(\"sciencelist_B_NGC7128_good = \",sciencelist_B_NGC7128_good,\"\\n\")\n",
+    "\n",
+    "sciencelist_V_NGC7128_good = imlist_clean(sciencelist_V_NGC7128,badlist)\n",
+    "print(\"sciencelist_V_NGC7128_good = \",sciencelist_V_NGC7128_good,\"\\n\")\n",
+    "\n",
+    "sciencelist_V_C11_good = imlist_clean(sciencelist_V_C11,badlist)\n",
+    "print(\"sciencelist_V_C11_good = \",sciencelist_V_C11_good)"
    ]
   },
   {
@@ -194,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,8 +268,8 @@
     "\n",
     "    #*************\n",
     "    #Look in the telescope manual on google drive for the gain and readnoise values\n",
-    "    g =  #gain in units of electrons/ADU\n",
-    "    rn =  #readnoise in electrons\n",
+    "    g = 2.13 #gain in units of electrons/ADU\n",
+    "    rn = 3.88 #readnoise in electrons\n",
     "\n",
     "    #loop over every image name in the bias list\n",
     "    for imname in biaslist_good:\n",
@@ -227,7 +284,7 @@
     "        #p is the pixel count in ADU and sigma_RN is the readnoise\n",
     "        #the u.<blah> is a python way of specifying unit that goes along with the number\n",
     "\n",
-    "        im_with_err = ccdproc.create_deviation(im,gain=g * u.electron/u.adu, readnoise=5.0*u.electron)\n",
+    "        im_with_err = ccdproc.create_deviation(im,gain=g * u.electron/u.adu, readnoise=rn*u.electron)\n",
     "    \n",
     "        #gain correct the images\n",
     "        gain_corr_im = ccdproc.gain_correct(im_with_err,g * u.electron/u.adu)\n",
@@ -237,7 +294,7 @@
     "        #of one term (constant) and see how well it does\n",
     "        #**********\n",
     "        poly_model = models.Polynomial1D(1)\n",
-    "        oscan_sub_im = ccdproc.subtract_overscan(gain_corr_im,overscan = gain_corr_im[****], \\\n",
+    "        oscan_sub_im = ccdproc.subtract_overscan(gain_corr_im,overscan = gain_corr_im[:,2048:], \\\n",
     "                                                 overscan_axis=1,model=poly_model)\n",
     "    \n",
     "        #make a plot of the median of each row of the now-subtracted overscan columns\n",
@@ -249,16 +306,16 @@
     "        #now go through every row, take the median, and put it into the check array\n",
     "        #**********\n",
     "        for i in range(len(np.asarray(oscan_sub_im[:]))): \n",
-    "            oscan_check[i] = np.median(dat[i,*****])\n",
+    "            oscan_check[i] = np.median(oscan_check[i,len(np.asarray(oscan_sub_im[:]))])\n",
     "            \n",
     "        #make a plot of the median vs the row number\n",
     "        #**********\n",
-    "        plt.plot(********,*******,'bo')\n",
+    "        plt.plot(oscan_check,oscan_check_nrow,'bo')\n",
     "        plt.show()\n",
     "        \n",
     "        #trim off the overscan regions\n",
     "        #**********\n",
-    "        trimmed_im = ccdproc.trim(oscan_sub_im[******])\n",
+    "        trimmed_im = ccdproc.trim_image(oscan_sub_im[oscan_check])\n",
     "        \n",
     "        #write the image\n",
     "        tr_imname = imname.replace('.fits','_tr.fits',1)\n",
@@ -268,15 +325,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:Negative values in array will be replaced with nan\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "too many indices for array",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-64-0bf8b3903c49>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mredpath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"/home/e731s866/RFSLAB/USER_DPT/e731s866/Data/Reduced/20191105/\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0moscan_subtract\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbiaslist_good\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mredpath\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrawpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-63-0280cbbfbbae>\u001b[0m in \u001b[0;36moscan_subtract\u001b[0;34m(imlist, redpath, rawpath)\u001b[0m\n\u001b[1;32m     50\u001b[0m         \u001b[0;31m#**********\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     51\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0masarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moscan_sub_im\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 52\u001b[0;31m             \u001b[0moscan_check\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmedian\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moscan_check\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0masarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moscan_sub_im\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     53\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     54\u001b[0m         \u001b[0;31m#make a plot of the median vs the row number\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: too many indices for array"
+     ]
+    }
+   ],
    "source": [
     "#perform overscan subtraction on the bias frames\n",
     "#the reduction path\n",
     "#****** This should be the absolute path to your files\n",
-    "rawpath = \n",
-    "redpath = \n",
+    "rawpath = \"/home/e731s866/RFSLAB/USER_DPT/e731s866/Data/Raw/20191105/\"\n",
+    "redpath = \"/home/e731s866/RFSLAB/USER_DPT/e731s866/Data/Reduced/20191105/\"\n",
     "\n",
     "oscan_subtract(biaslist_good, redpath, rawpath)"
    ]
