--- a/reduction_part2_student.ipynb
+++ b/reduction_part2_student.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,16 +50,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "rawpath = \"/Users/grudnick/Work/Teaching/Classes/Astro_596/Fall_2019/Observing_project/Data/Raw/20191104/\"\n",
-    "redpath = \"/Users/grudnick/Work/Teaching/Classes/Astro_596/Fall_2019/Observing_project/Data/Reduced/20191104/\"\n",
+    "rawpath = \"/home/e731s866/RFSLAB/USER_DPT/e731s866/Data/Raw/20191105/\"\n",
+    "redpath = \"/home/e731s866/RFSLAB/USER_DPT/e731s866/Data/Reduced/20191105/\"\n",
     "\n",
-    "biaslist = \"biaslist\"\n",
+    "biaslist = \"biaslist.txt\"\n",
     "biaslistpath = redpath + biaslist\n",
     "\n",
+    "#np.array([\"b000_tr.fits\", \"b001_tr.fits\", \"b002_tr.fits\", \"b003_tr.fits\", \"b004_tr.fits\", \"b005_tr.fits\",\"b006_tr.fits\",\"b007_tr.fits\",\"b008_tr.fits\",\"b009_tr.fits\",\"b010_tr.fits\",\"b011_tr.fits\",\"b012_tr.fits\",\"b013_tr.fits\",\"b014_tr.fits\",\"b015_tr.fits\",\"b016_tr.fits\",\"b017_tr.fits\",\"b018_tr.fits\",\"b019_tr.fits\",\"b020_tr.fits\",\"b021_tr.fits\"])\n",
     "\n",
     "#initialize list of bias frames\n",
     "bias_imlist = []\n",
@@ -97,7 +98,7 @@
     "#about 5 pixels because of expected statistical variations.  Assume the noise is distributed like a Gaussian.\n",
     "#Remember, you want to get rid of really deviant pixels, so if you set the threshold too high you won't\n",
     "#get rid of anything!\n",
-    "bias_comb.sigma_clipping(low_thresh=3, high_thresh=, func=np.ma.median)\n",
+    "bias_comb.sigma_clipping(low_thresh=3, high_thresh=5, func=np.ma.median)\n",
     "\n",
     "#Use these masks to combine the images.  This now becomes your master bias\n",
     "master_bias = bias_comb.average_combine()\n",
@@ -308,9 +309,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-8-a575ea77b0cf>, line 27)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-a575ea77b0cf>\"\u001b[0;36m, line \u001b[0;32m27\u001b[0m\n\u001b[0;31m    im_flat =\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def flat_corr(imlist_name, redpath, masterflat_name):\n",
     "    #go through each image in a list, subtract the master bias from that image, and write the image out again.\n",
