subtract bias complete. master flat underway

--- a/reduction_part2_student.ipynb
+++ b/reduction_part2_student.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,11 +50,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "rawpath = \"/home/e731s866/RFSLAB/USER_DPT/e731s866/Data/Raw/20191105/\"\n",
+    "rawpath = \"/home/e731s866/RFSLAB/USER_DPT/e731s866/Data/Raw2/20191105/\"\n",
     "redpath = \"/home/e731s866/RFSLAB/USER_DPT/e731s866/Data/Reduced/20191105/\"\n",
     "\n",
     "biaslist = \"biaslist.txt\"\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
     "            #***********  \n",
     "            #insert appropriate expression from https://ccdproc.readthedocs.io/en/latest/image_combination.html\n",
     "            #subtract bias frame\n",
-    "            im_bsub = \n",
+    "            im_bsub = ccdproc.subtract_bias(im, master_bias)\n",
     "            #now write out the file, replacing \".fits\" with \"b.fits\"\n",
     "            bsub_imname = imname.replace('.fits','b.fits',1)\n",
     "            #print(bsub_imname)\n",
@@ -163,17 +163,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "#**************\n",
     "#put in the appropriate file name for each of the flats and science frames\n",
     "#subtract bias from flats in each band (you will need two calls to this function)\n",
-    "bias_sub(, redpath, master_bias)\n",
+    "flatlist = \"flatlist\"\n",
+    "sciencelist = \"sciencelist\"\n",
+    "\n",
+    "bias_sub(flatlist, redpath, master_bias)\n",
     "\n",
     "#subtract bias from science frames in each band.  You will need to do this for each band and each target\n",
-    "bias_sub(,redpath,master_bias)\n"
+    "bias_sub(sciencelist,redpath,master_bias)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -309,18 +316,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-8-a575ea77b0cf>, line 27)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-a575ea77b0cf>\"\u001b[0;36m, line \u001b[0;32m27\u001b[0m\n\u001b[0;31m    im_flat =\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def flat_corr(imlist_name, redpath, masterflat_name):\n",
     "    #go through each image in a list, subtract the master bias from that image, and write the image out again.\n",
