--- a/reduction_part2_student.ipynb
+++ b/reduction_part2_student.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h4>Your answer here:</h4>"
+    "<h4>Your answer here:</h4> A median combination will select the middle value which will not skew the chosen result if a high value such as a cosmic ray is present. "
    ]
   },
   {
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +263,7 @@
     "    #combine the scaled images\n",
     "    #****************\n",
     "    #insert appropriate expression from https://ccdproc.readthedocs.io/en/latest/image_combination.html\n",
-    "    master_flat = \n",
+    "    master_flat = flat_combiner.median_combine()\n",
     "    \n",
     "\n",
     "    #now write out the master flat\n",
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,8 +288,11 @@
     "#make the appropriate calles to master_flatmake to make the flatfields. \n",
     "#Do this for each of your sets of flatfields\n",
     "#figure out what the missing argument is\n",
-    "master_flatmake(, redpath, 'master_flat_B.fits')\n",
-    "master_flatmake(, redpath, 'master_flat_V.fits')"
+    "flatlist_V = \"flatlist_V\"\n",
+    "flatlist_B = \"flatlist_B\"\n",
+    "\n",
+    "master_flatmake(flatlist_B, redpath, 'master_flat_B.fits')\n",
+    "master_flatmake(flatlist_V, redpath, 'master_flat_V.fits')"
    ]
   },
   {
@@ -316,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +349,7 @@
     "            #***********  \n",
     "            #insert appropriate expression from https://ccdproc.readthedocs.io/en/latest/image_combination.html\n",
     "            #subtract bias frame\n",
-    "            im_flat = \n",
+    "            im_flat = ccdproc.flat_correct(im, master_flat)\n",
     "            \n",
     "            #now write out the file\n",
     "            flat_imname = imname.replace('.fits','f.fits',1)\n",
@@ -359,19 +362,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "#*************\n",
+    "sciencelist_B = \"sciencelist_B\"\n",
+    "sciencelist_V = \"sciencelist_V\"\n",
     "#flatfield correct all the flats\n",
     "#put in the correct argument for the function\n",
-    "flat_corr(, redpath, 'master_flat_B.fits')\n",
-    "flat_corr(, redpath, 'master_flat_V.fits')\n",
+    "flat_corr(flatlist_B, redpath, 'master_flat_B.fits')\n",
+    "flat_corr(flatlist_V, redpath, 'master_flat_V.fits')\n",
     "\n",
     "#flatfield correct the science frames in each band\n",
-    "flat_corr(,redpath, 'master_flat_B.fits')\n",
-    "flat_corr(,redpath, 'master_flat_V.fits')"
+    "flat_corr(sciencelist_B,redpath, 'master_flat_B.fits')\n",
+    "flat_corr(sciencelist_V,redpath, 'master_flat_V.fits')"
    ]
   },
   {
